--- a/Level 3 Programming Website/website/static/styles/mainpage.css
+++ b/Level 3 Programming Website/website/static/styles/mainpage.css
@@ -1,3 +1,5 @@
+
+
 /* General Formatting */  
 
 h1 {
@@ -20,20 +22,14 @@ a:visited {
     color: black;
 } 
 
-    /* Home */ 
-
-/* Background Video */ 
-
-
-/* Header */
-/* CODE NOT WORKING. WHAT IS WRONG??????? */
+    /* Header */
 .main-header {
     width: 100%;
     border: solid;
     background-color: white;
 }
 
-/* The links under the header */  
+    /* The links under the header */  
 .header-hyperlinks {
     text-align: center;
     color: black;
@@ -46,6 +42,13 @@ a:visited {
     font-family: serif !important;
 }
 
+.front-logo {
+    height: 200x;
+    width: 200x;
+    margin: 20px;
+    text-align: center;
+}
+
 .header-hyperlinks small {
     font-size: 100%;
 }
@@ -55,7 +58,7 @@ a:visited {
     display: block;
 }
 
-/* Team Game Logos */  
+    /* Team Game Logos */  
 
 .logos {
     height: 200px;
@@ -82,7 +85,7 @@ a:visited {
 /* For debugging */
 .containers {
     width: 100%;
-    margin: 10px;
+    margin: 5px;
     padding: 10px;
     border-style: solid;
     border-radius: 2px;
@@ -97,6 +100,43 @@ a:visited {
 /* About us */ 
 
 .aboutus-image {
-    width: 500px;
+    width: 50px;
     height: auto;
+    align-self: center;
+    margin: 0;
+    top: 50%;
 }
+
+.team-logos {
+    height: 175px;
+    width: 175px;
+    padding: 10px;
+}
+
+ /* Override Bootstrap container padding */
+ body {
+    padding: 0%;
+    max-width: 1920px; 
+	margin: 0 auto !important; 
+	float: none !important; 
+}
+  
+/* Center the larger central image */
+.testicles {
+    margin: auto;
+    width: 75%;
+}
+  
+.imageCenter {
+    margin: auto;
+    align-self: center;
+    max-width: 500px;
+}
+  
+      /* Set a maximum height for smaller images */
+.small-logo {
+    max-height: 100px; /* Adjust this value as needed */
+}
+
+
+
