--- a/Level 3 Programming Website/website/templates/base.html
+++ b/Level 3 Programming Website/website/templates/base.html
@@ -19,9 +19,9 @@
 
    
   </head>
-  <body>
+  <!--<body>
     {% block navbar %}
-    <div>
+    <div class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="containers">
         {% if user.is_authenticated %}
         <a class="nav-item nav-logo" id="home" href="/"
@@ -30,12 +30,12 @@
           alt="Nav_Logo"
           style="height: 45px;"
         /></a> 
-          <a class="HEADER" href="/">Home</a>
-          <a class="HEADER" href="/aboutUs">Roster</a>
-          <a class="HEADER" href="/community">Community</a>
-          <a class="HEADER" href="/news">News</a>
-          <a class="HEADER" href="/merch">Merch</a>
-          <a class="HEADER" href="/logout">Logout</a>
+          <a class="nav-item" href="/">Home</a>
+          <a class="nav-item" href="/aboutUs">Roster</a>
+          <a class="nav-item" href="/community">Community</a>
+          <a class="nav-item" href="/news">News</a>
+          <a class="nav-item" href="/merch">Merch</a>
+          <a class="nav-item" href="/logout">Logout</a>
         {% else %}
           <img
           src="{{url_for('static', filename='elg_logo_transparent.jpeg')}}"
@@ -52,7 +52,34 @@
         <a class="HEADER" href="/sign_up">Sign Up</a>
         {% endif %}
       </div>
-    </div>
+    </div>-->
+
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+      <div class="container-fluid">
+        <a class="nav-item nav-logo" id="home" href="/"
+        ><img
+          src="{{url_for('static', filename='elg_logo_transparent.jpeg')}}"
+          alt="Nav_Logo"
+          style="height: 45px;"
+        /></a> 
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <ul class="navbar-nav">
+           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+           </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Roster</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Community</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
     {% endblock %}
 
     <div class="container">{% block content %} {% endblock %}</div>
